# VEngine

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Assets/Builtin/Shaders/: BasicMesh.hlsl  BasicMesh.veshader
Assets/Samples/Materials/: CubeMaterial03.vematerial  CubeMaterial04.vematerial  CubeMaterial05.vematerial  CubeMaterial09.vematerial  CubeMaterial10.vematerial  CubeMaterial11.vematerial  CubeMaterial13.vematerial  CubeMaterial17.vematerial
Assets/Samples/Models/: Cube.obj.veasset
CMake/: SetupBoostLibrary.cmake  SetupDirectXShaderCompiler.cmake  SetupDotNetHosting.cmake  SetupImGui.cmake  SetupJolt.cmake  SetupSlang.cmake  SetupSpirvCross.cmake  VEngineOptions.cmake  VEngineTarget.cmake
CMake/Scripts/: CodeSignMacBundleAfterPostBuild.sh  CopyIOSPackageData.cmake  WithMsvc.bat
CMake/Targets/: Applications.cmake  Demos.cmake  Engine.cmake  EngineScriptHost.cmake  ExampleProjects.cmake  ManagedScripting.cmake  Tests.cmake  Tools.cmake
CMake/Targets/Applications/: Common.cmake  IOS.cmake  Mac.cmake  Windows.cmake
CMake/Targets/Demos/: RhiMetalTriangle.cmake
CMake/Targets/Tests/: AssertionLoggingTests.cmake  JoltIntegrationTests.cmake  JsonUtilsTests.cmake  MathTests.cmake  MemoryTests.cmake  ResourceRenderTests.cmake  TimeTests.cmake  ViewportTests.cmake  VirtualShadowTests.cmake
CMake/Targets/Tools/: AssetTool.cmake  ShaderTool.cmake
CMake/Toolchains/: IOS.cmake  Mac.cmake  Windows64.cmake  iOS.cmake
DemoProject/: .gitignore  VEProject.json
DemoProject/Assets/Materials/: CubeBlue.vematerial  (+5 more)
Docs/: ArchitectureOverview.md  AssetPipeline.md  CSharpScriptingWindowsMVP.md  CodingStyle.md  CoreModuleDesign.md  DevelopmentPlan.md  EditorAssetDatabase.md  EditorMVP.md  FileSystemDesign.md  HlslToMetalShaderFlow.md  IOSPackagingDesign.md  IOSystemDesign.md  JobSystemDesign.md  LightweightPhysicsFixedUpdateDesign.md  LoggingFacadeDesign.md  MacPackagingDesign.md  RenderSystemDesign.md  RhiShapeFeasibility.md  RuntimeAssetLoader.md  RuntimeResourceLoader.md  RuntimeThreadModel.md  SceneRenderingVerticalSlice.md  SceneSerialization.md  ShaderToolUsage.md  ThreadingDesign.md  TimeSystemDesign.md  VEngine_GPU_Driven_VSM_Workflow.pptx  WindowsPackagingDesign.md
Editor/Core/: Editor.cpp  Editor.h  EditorAssetDatabase.cpp  EditorAssetDatabase.h  EditorAssetPath.cpp  EditorAssetPath.h  EditorBuildPackageDialog.cpp  EditorBuildPackageDialog.h  EditorBuiltinResources.cpp  EditorBuiltinResources.h  EditorEventDispatcher.h  EditorEvents.h  EditorInput.cpp  EditorInput.h  EditorInputBackend.h  EditorProject.cpp  EditorProject.h  EditorProjectDirectoryDialog.cpp  EditorProjectDirectoryDialog.h  EditorProjectEditingView.cpp  EditorProjectEditingView.h  EditorProjectPackager.cpp  EditorProjectPackager.h  EditorProjectPacker.cpp  EditorProjectPacker.h  EditorProjectRegistry.cpp  EditorProjectRegistry.h  EditorProjectRegistryBackend.h  EditorProjectSelectionView.cpp  EditorProjectSelectionView.h  EditorReflection.cpp  EditorReflection.h  EditorRenderBackend.h  EditorResourceLoader.cpp  EditorResourceLoader.h  EditorScriptCompiler.cpp  EditorScriptCompiler.h  EditorScriptDatabase.cpp  EditorScriptDatabase.h  EditorScriptProjectGenerator.cpp  (+7 more)
Editor/Panels/: AssetsPanel.cpp  AssetsPanel.h  BasePanel.cpp  BasePanel.h  GameViewPanel.cpp  GameViewPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  SceneViewPanel.cpp  SceneViewPanel.h
Editor/RenderPass/: EditorGizmoRenderPass.cpp  EditorGizmoRenderPass.h  SceneGridRenderPass.cpp  SceneGridRenderPass.h
Editor/Windows/: WinEditorInputBackend.cpp  WinEditorInputBackend.h  WinEditorProjectPacker.cpp  WinEditorProjectPacker.h  WinEditorProjectRegistryBackend.cpp  WinEditorProjectRegistryBackend.h  WinEditorRenderBackend.cpp  WinEditorRenderBackend.h  WinEditorWindowPlacement.cpp  WinEditorWindowPlacement.h  WindowsEditor.cpp  WindowsEditorApplication.cpp  WindowsEditorApplication.h  WindowsEditorAssetBrowserPanel.cpp  WindowsEditorGameViewPanel.cpp  WindowsEditorInspectorPanel.cpp  WindowsEditorPanels.cpp  WindowsEditorPanels.h  WindowsEditorSceneHierarchyPanel.cpp  WindowsEditorSceneViewPanel.cpp  WindowsProjectLauncher.cpp  WindowsProjectLauncher.h  main.cpp
Editor/macOS/: EditorInput.mm  EditorRenderBackend.mm  IOSEditorProjectPacker.cpp  IOSEditorProjectPacker.h  Info.plist.in  MacEditorApplication.cpp  MacEditorApplication.h  MacEditorInputBackend.h  MacEditorInputBackend.mm  MacEditorProjectPacker.cpp  MacEditorProjectPacker.h  MacEditorProjectRegistryBackend.h  MacEditorProjectRegistryBackend.mm  MacEditorRenderBackend.h  MacEditorRenderBackend.mm  MacEditorWindowPlacement.h  MacEditorWindowPlacement.mm  main.mm
Examples/AssetPipelineSample/: .veproject
Managed/VEngine.ScriptAPI/: Camera.cs  Component.cs  GameObject.cs  Input.cs  Log.cs  Physics.cs  Quaternion.cs  Ray.cs  RaycastHit.cs  ScriptApiBootstrap.cs  ScriptBehaviour.cs  ScriptBridge.cs  Time.cs  Transform.cs  VEngine.ScriptAPI.csproj  Vector2.cs  Vector3.cs
Player/Windows/: VEnginePlayer.cpp  VEnginePlayer.h  WindowsPlayer.cpp  WindowsPlayer.h  main.cpp
Player/iOS/: IOSPlayer.mm  Info.plist.in  LaunchScreen.storyboard
Player/macOS/: Info.plist.in  MacPlayer.mm
Tests/Shaders/: ValidateShaderArtifacts.cmake
Tests/Unit/: AssertionLoggingTests.cpp  AssetPipelineTests.cpp  CoreTests.cpp  EditorProjectTests.cpp  EngineRuntimeTests.cpp  FileSystemTests.cpp  GameThreadSystemTests.cpp  IOSystemTests.cpp  InputTests.cpp  JobSystemTests.cpp  JoltIntegrationTests.cpp  JsonUtilsTests.cpp  LoggingTests.cpp  MathTests.cpp  MemoryTests.cpp  PackageTests.cpp  PhysicsTests.cpp  RenderSystemTests.cpp  RenderTests.cpp  ResourceManifestTests.cpp  ResourceRenderTests.cpp  SceneSerializationTests.cpp  SceneTests.cpp  ScriptingTests.cpp  ThreadingTests.cpp  TimeTests.cpp  ViewportTests.cpp  VirtualShadowTests.cpp
Tools/AssetTool/: AssetTool.cpp  ObjImporter.cpp  ObjImporter.h
Tools/Package/: PackageService.cpp  PackageService.h  PackageTool.cpp
Tools/ShaderTool/: ShaderTool.cpp
(+405 files in other folders)
